--- a/index.html
+++ b/index.html
@@ -28,63 +28,91 @@
         <div class="container">
             <div class="jumbotron center-text">
                 <h1>Persian Web Toolkit</h1>
+
                 <p>
                     Some Ui Tools Compatible With Persian Layout And
                     <a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar">
                         Jalali Calendar</a>
                 </p>
+
+                <p class="transparent text-small">
+                    Persian Web Toolkit is freely distributable under the terms of the MIT license.
+                </p>
+
             </div>
         </div>
     </div>
+    <h3 class=" text-center text-muted h2">Projects</h3>
+
     <div class="container">
         <div class="row">
-            <div class="col-md-4  product-box">
-                <h1>Persian Date </h1>
-                <!--<span class="label label-success">Version 0.1.8</span>-->
-                <p class="description">
-                    javascript date library for parsing, validating, manipulating, and formatting persian dates System.
-                </p>
-                <p>
+            <div class="col-md-4 product-box">
+                <div class="container-fluid">
+                    <img class="center-block" src="/PersianWebToolkit/vendor/img/project/persian-date.png"/>
+                </div>
+                <div class="container-fluid">
+                    <h1>Persian Date </h1>
+                    <span class="label label-success">Version 0.1.8</span>
+
+                    <p class="description">
+                        javascript date library for parsing, validating, manipulating, and formatting persian dates
+                        System.
+                    </p>
                     <a class="btn btn-default github-link" href="https://github.com/babakhani/pwt.datepicker">Github</a>
                     <a class="btn btn-primary" href="/PersianWebToolkit/doc/persiandate/">Document</a>
-                </p>
+                </div>
             </div>
             <div class="col-md-4 product-box">
-                <h1>Persian Date/Time Picker</h1>
-                <!--<span class="label label-success">Version 0.4.0</span>-->
-                <p class="description">
-                    jquery datepicker plugin work with Iranian calendar.
-                </p>
-                <p>
-                    <a class="btn btn-default  github-link" href="https://github.com/babakhani/PersianDate">Github</a>
+                <div class="container-fluid">
+                    <img class="center-block" src="/PersianWebToolkit/vendor/img/project/datepicker.png"/>
+                </div>
+                <div class="container-fluid">
+                    <h1>Persian Date/Time Picker</h1>
+                    <span class="label label-success">Version 0.4.5</span>
+
+                    <p class="description">
+                        jQuery datepicker plugin work with Iranian calendar.
+                    </p>
+                    <a class="btn btn-default  github-link"
+                       href="https://github.com/babakhani/PersianDate">Github</a>
                     <a class="btn btn-primary" href="/PersianWebToolkit/doc/datepicker/">Document</a>
-                </p>
+                </div>
             </div>
             <div class="col-md-4 product-box">
-                <h1>Persian Heat chart</h1>
-                <p class="description">
-                    Persian Heat chart.
-                    A heat map is a graphical representation of data where the individual values contained in a matrix are represented as colors.
-                </p>
-                 <p>
-                    <a class="btn btn-default  github-link" href="https://github.com/babakhani/pwt.calheatmap">Github</a>
-                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/calheatmap/">Document</a>
-                </p>
+                <div class="container-fluid">
+                    <img class="center-block" src="/PersianWebToolkit/vendor/img/project/persian-calheatmap.png"/>
+                </div>
+                <div class="container-fluid">
+                    <h1>Persian Heat chart</h1>
+                    <span class="label label-warning">Alpha Version 0.0.1</span>
+
+                    <p class="description">
+                        Persian Heat chart.
+                        A heat map is a graphical representation of data where the individual values contained in a
+                        matrix
+                        are represented as colors.
+                    </p>
+                    <a class="btn btn-default  github-link"
+                       href="https://github.com/babakhani/pwt.calheatmap">Github</a>
+                    <!--<a class="btn btn-primary" href="/PersianWebToolkit/doc/calheatmap/">Document</a>-->
+                </div>
             </div>
         </div>
     </div>
-    <!--<div class="board-box">-->
-        <!--<div class="container center-text">-->
-            <!--<h3>Contribut</h3>-->
-            <!--<p>Fork project from github and join contribiuter</p>-->
+    <div class="board-box">
+        <h3 class="h3 text-muted text-center ">Join, contribute</h3>
 
-
-        <!--</div>-->
-    <!--</div>-->
-
+        <div class="container text-center ">
+            <p>
+                So you really like "Persian Web Toolkit" and are eager to help? You can contribute in various ways.
+                <br/>
+                Fork project from github and join contributor
+            </p>
+        </div>
+    </div>
     <!--<div class="row">-->
         <!--<div class="container">-->
-            <!--<h3 class="center-text">Meet the team</h3>-->
+            <!--<h3 class="text-center h3 text-muted">Meet the team</h3>-->
             <!--<div class="row">-->
                 <!--<div class="col-md-6 ">-->
                     <!--<div class="team-item">-->
@@ -92,7 +120,7 @@
                             <!--<img src="https://avatars0.githubusercontent.com/u/3070333?v=3&s=460" alt="..."-->
                                  <!--class="img-circle">-->
                         <!--</div>-->
-                        <!--<h6><a href="github.com/babakhani" >Reza babakhani</a></h6>-->
+                        <!--<h6><a href="github.com/babakhani">Reza babakhani</a></h6>-->
                     <!--</div>-->
                 <!--</div>-->
                 <!--<div class="col-md-6">-->
@@ -101,17 +129,14 @@
                             <!--<img src="https://avatars3.githubusercontent.com/u/1302253?v=3&s=460" alt="..."-->
                                  <!--class="img-circle">-->
                         <!--</div>-->
-                        <!--<h6><a href="github.com/pylover" >Pylover</a></h6>-->
+                        <!--<h6><a href="github.com/pylover">Pylover</a></h6>-->
                     <!--</div>-->
                 <!--</div>-->
             <!--</div>-->
         <!--</div>-->
     <!--</div>-->
-
-
 </div>
 <div id="footer_wrap" class="outer"></div>
-
 <div ng-include="'/PersianWebToolkit/include/footer.html'"></div>
 </body>
 <script type="text/javascript">
