--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </p>
                  <p>
                     <a class="btn btn-default  github-link" href="https://github.com/babakhani/pwt.calheatmap">Github</a>
-                    <a class="btn btn-primary" href="/PersianWebToolkit/doc/calheatmap/">Document</a>
+                    <a class="btn btn-warning" href="http://htmlpreview.github.io/?https://github.com/babakhani/pwt.calheatmap/blob/master/src/index.html">Demo</a>
                 </p>
             </div>
         </div>
