fix calheatmap document

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             </div>
         </div>
     </div>
-    <!--<div class="board-box">-->
-        <!--<div class="container center-text">-->
-            <!--<h3>Contribut</h3>-->
-            <!--<p>Fork project from github and join contribiuter</p>-->
-
-
-        <!--</div>-->
-    <!--</div>-->
+    <div class="board-box">
+        <div class="container center-text">
+            <h3>Contribut</h3>
+            <p>
+                A great way to get involved in open source is to contribute to the existing projects you’re using.
+            </p>
+        </div>
+    </div>
 
     <!--<div class="row">-->
         <!--<div class="container">-->
