--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </p>
                     <a class="btn btn-default  github-link"
                        href="https://github.com/babakhani/pwt.calheatmap">Github</a>
-                    <a class="btn btn-primary" href="htmlpreview.github.io/?https://github.com/babakhani/pwt.calheatmap/blob/master/src/index.html">Demo</a>
+                    <a class="btn btn-primary" href="http://htmlpreview.github.io/?https://github.com/babakhani/pwt.calheatmap/blob/master/src/index.html">Demo</a>
                 </div>
             </div>
         </div>
