--- a/beta/index.html
+++ b/beta/index.html
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/PersianWebToolkit/beta">
                 <div class="page-logo"></div>
                 Persian Web Toolkit
             </a>
