--- a/beta/index.html
+++ b/beta/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Persian Web Toolkit</title>
-    <link rel="shortcut icon" href="./img/logo.ico"/>
+    <link rel="shortcut icon" href="./img/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
     <!-- Bootstrap Core CSS -->
     <link href="lib/startbootstrap-heroic-features/css/bootstrap.min.css" rel="stylesheet">
